# iGEM

./: run_fit_module1.py
brain_delivery_model/: main.py  run_module6_scan.py
config/: base_config.yaml
fitting/: plot_module1_fit.py  simulate_module1.py
optimization/: metrics.py
puf-offtarget-atlas/: Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
puf-offtarget-atlas/app/: streamlit_app.py
puf-offtarget-atlas/configs/: default.yaml
puf-offtarget-atlas/examples/: example_config.yaml
puf-offtarget-atlas/results/AACGUCUAUA_20260721_052459_620912/: all_transcript_hits.parquet  candidates.bed  candidates.bed12  potential_editing_events.tsv  run_metadata.json  summary.json  top_hits.tsv  unique_genomic_loci.tsv
puf-offtarget-atlas/scripts/: download_gencode.py  prepare_gencode.py  prepare_gtex.py
puf-offtarget-atlas/src/puf_offtarget_atlas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
puf-offtarget-atlas/src/pufscan/: __init__.py  cli.py  config.py  consequence.py  coordinates.py  expression.py  gencode.py  gene_metadata.py  index.py  pipeline.py  plotting.py  report.py  schemas.py  scoring.py  search.py  sequence.py  structure.py
puf-offtarget-atlas/templates/: report.html.j2
puf-offtarget-atlas/tests/: test_cli.py  test_config.py  test_consequence.py  test_coordinates.py  test_end_to_end.py  test_expression.py  test_gencode.py  test_scoring.py  test_search.py  test_sequence.py  test_structure.py
puf-offtarget-atlas/tests/data/: expression.tsv  synthetic.fa  synthetic.gtf
(+113 files in other folders)
