[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puf-offtarget-atlas"
version = "0.1.0"
description = "Transcriptome-scale prioritization of potential PUF RNA binding sites"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "PUF-OffTarget Atlas contributors"}]
dependencies = [
  "biopython>=1.83",
  "jinja2>=3.1",
  "numpy>=1.26",
  "pandas>=2.1",
  "plotly>=5.20",
  "polars>=1.0",
  "pyahocorasick>=2.1",
  "pyarrow>=15",
  "pydantic>=2.6",
  "pyfaidx>=0.8",
  "pyyaml>=6.0",
  "requests>=2.31",
  "scipy>=1.11",
  "streamlit>=1.33",
  "tqdm>=4.66",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["mypy>=1.10", "pytest>=8", "ruff>=0.5", "types-PyYAML", "types-requests"]

[project.scripts]
pufscan = "pufscan.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pufscan = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM905"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests"]
